--- a/common/pubspec.yaml
+++ b/common/pubspec.yaml
@@ -1,5 +1,5 @@
-name: auth
-description: Authentication module.
+name: common
+description: A new Flutter package project.
 version: 0.0.1
 author:
 homepage:
@@ -11,13 +11,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_sign_in: ^4.5.1
   http: ^0.12.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mockito: ^4.1.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
